user page, login / register page no connection by now to create/check users, only html and a few js

--- a/css/custom.css
+++ b/css/custom.css
@@ -36,3 +36,8 @@ textarea {
     text-decoration: none;
     border-radius: 0px 4px 4px 0;
 }
+
+/* user */
+.user-form {
+	list-style-type: none;
+}
